# Guia-Master-IA

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  REFERENCES.md  RUBRIC.md  _DEBUG_FULL.html  environment.yml  generate_audio.py  generate_pdfs_pro.py  plan_de_estudio_6_meses.md  plan_de_estudio_horas.json  pyproject.toml  requirements-visual.txt  requirements.txt  setup_env.sh
Herramientas_Estudio/: AI_CODE_REVIEWER.md  BADGES_CHECKPOINTS.md  CIERRE_SEMANAL.md  DESAFIO_TABLERO_BLANCO.md  DIARIO_ERRORES.md  DIRTY_DATA_CHECK.md  DRILL_DIMENSIONES_NUMPY.md  DRYRUN_BACKPROPAGATION.md  SIMULACRO_EXAMEN_TEORICO.md  TEORIA_CODIGO_BRIDGE.md  rubrica.csv
M01_Fundamentos_Python/: README.md
M02_Algebra_Lineal/: README.md
M03_Calculo_Optimizacion/: README.md
M04_Probabilidad_Estadistica/: README.md
M05_Aprendizaje_Supervisado/: README.md
M06_Aprendizaje_No_Supervisado/: README.md
M07_Deep_Learning/: README.md
M08_Proyecto_Final/: REPORT_TEMPLATE.md
M08_Proyecto_Integrador/: README.md  RUBRIC.md  requirements_capstone.txt
Recursos_Adicionales/: CHECKLIST.md  INTERACTIVE_LABS.md  RECURSOS.md
docs/: 00_INDICE.md  01_PYTHON_CIENTIFICO.md  01_PYTHON_PROFESIONAL.md  02_ALGEBRA_LINEAL_ML.md  03_CALCULO_MULTIVARIANTE.md  04_PROBABILIDAD_ML.md  05_SUPERVISED_LEARNING.md  06_INVERTED_INDEX.md  06_UNSUPERVISED_LEARNING.md  07_DEEP_LEARNING.md  07_RECURSION.md  08_PROYECTO_MNIST.md  08_SORTING.md  10_ALGEBRA_LINEAL.md  12_PROYECTO_INTEGRADOR.md  14_TREES.md  15_GRAPHS.md  16_DYNAMIC_PROGRAMMING.md  20_ESTADISTICA_INFERENCIAL.md  22_ML_SUPERVISADO.md  99_MATERIAL_REPO.md  (+19 more)
(+148 files in other folders)
